--- a/css/style.css
+++ b/css/style.css
@@ -144,3 +144,43 @@ div.row{
     margin-bottom: 20px;
 
 }
+
+.arrow-down-information{
+    margin-left: 50% ;
+    transform: translateX(-50);
+    font-size: 54px;
+  
+    animation: go-back 1s infinite alternate;
+}
+
+
+
+@keyframes go-back {
+    from {
+      transform: translateY(100px);
+    }
+    to {
+      transform: translateY(0);
+    }
+  }
+
+
+
+  #exampleModalLong{
+
+    color: black ;
+
+  }
+
+  #exampleModalLong h5 {
+
+    color: #a7591a;
+
+  }
+
+  #response-now{
+
+    color: white;
+    background-color: #86933d ;
+    
+  }
